--- a/index.html
+++ b/index.html
@@ -1,3 +1,155 @@
-<!doctype html><html lang=en><head><title>Hope Community Fellowship</title>
-<meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=description content="Holding forth the faith that is founded in the facts."><meta name=author content="David McClellan"><meta name=keywords content="theme,hugo,podcast"><link rel=alternate type=application/rss+xml href=https://hcftesting.hacdan.org/index.xml title="Hope Community Fellowship"><meta name=generator content="Hugo 0.126.3"><link rel="shortcut icon" href=/example16.png sizes=16x16><link rel="shortcut icon" href=/example32.png sizes=32x32><meta name=apple-itunes-app content="app-id=1034013280"><meta property="og:url" content="https://hcftesting.hacdan.org/"><meta property="og:site_name" content="Hope Community Fellowship"><meta property="og:title" content="Hope Community Fellowship"><meta property="og:locale" content="en_us"><meta property="og:type" content="website"><meta name=twitter:card content="summary"><meta name=twitter:title content="Hope Community Fellowship"><link rel=stylesheet href=https://hcftesting.hacdan.org/fontawesome/css/all.min.css><link rel=stylesheet href=/style.main.min.71d9d9da0478bb74a6b06b0ecec6a8756e95d2fa824e058753bce43a487f35a2.css integrity="sha256-cdnZ2gR4u3SmsGsOzsaodW6V0vqCTgWHU7zkOkh/NaI=" media=screen crossorigin=anonymous><link rel=stylesheet href=https://hcftesting.hacdan.org/example.css></head><body class=landing><div id=page-wrapper><header id=header class=alt><h1><a href=https://hcftesting.hacdan.org/>Hope Community Fellowship</a></h1><nav id=nav><ul><li><a href=/>Home</a></li><li><a href=/goodnews>Good News</a></li><li><a href=/whattoexpect>What to expect</a></li><li><a href=/about><i class="fas fa-angle-down"></i>
-About</a><ul><li><a href=/about>About Us</a></li></li><li><a href=/sermonnotes>Sermon Notes</a></li></li><li><a href=/whatwebelieve>What We Believe</a></li></li></ul></li><li><a href=/contact>Contact Us</a></li><li><a href=/missionstatement>Mission Statement</a></li></ul></nav></header><section id=banner><h2>Hope Community Fellowship</h2><p>Holding forth the faith that is founded in the facts.</p><ul class="actions special"><li><a href=/contact class="button primary">Get in touch</a></li><li><a href=/#feature-icons class=button>Find out more</a></li></ul></section><section id=main class=container><section class="box special"><header class=major><h2>Church on Sunday</h2><a name=services></a><p>We meet at 10AM at <a href="https://www.google.com/maps?q=973+Nortontown+Road,+Addison,+VT,+USA">973 Nortontown Road, Addison VT 05491</a> in the Kauffman&rsquo;s front yard.</p></header><div id=map class=box></div><link rel=stylesheet href=https://unpkg.com/leaflet@1.9.3/dist/leaflet.css integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin=anonymous><script src=https://unpkg.com/leaflet@1.9.3/dist/leaflet.js integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=anonymous></script><script>var marker,loc=[44.06024181551744,-73.29052538667707],mymap=L.map("map").setView(loc,18);L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",{attribution:'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',maxZoom:18}).addTo(mymap),marker=L.marker(loc).addTo(mymap)</script></section><a name=feature-icons></a><section class="box special features"><div class=features-row><section><span class="icon major fas fa-hands-helping accent1"></span><h3>Serve</h3><p>Growing people who serve our community.</p></section><section><span class="icon major fas fa-church accent2"></span><h3>Meet</h3><p>Meeting together to listen to God&rsquo;s word.</p></section></div><div class=features-row><section><span class="icon major fas fa-comments accent5"></span><h3>Speak</h3><p>Speaking encouragement to one-another.</p></section><section><span class="icon major fas fa-heartbeat accent3"></span><h3>Loved</h3><p>Knowing Love. Being Loved. The greatest commandment</p></section></div></section><a name=feature-images></a><div class=row><div class="col-6 col-12-narrower"><section class="box special"><span class="image featured"><img src=https://hcftesting.hacdan.org/img/freely-10057.jpg alt></span><h3>Childrens' Ministry</h3><p>A church for the family. We offer childrends ministry during our Sunday service.</p></section></div><div class="col-6 col-12-narrower"><section class="box special"><span class="image featured"><img src=https://hcftesting.hacdan.org/img/biblestudy.jpg alt></span><h3>Thursday Biblestudy</h3><p>Want more during the week?</p><ul class="actions special"><li><a href=https://hcftesting.hacdan.org/services class="button alt">Join us for Thursday evening Bible study!</a></li></ul></section></div></div></section><footer id=footer><ul class=icons><li><a href=//twitter.com/@HCFChurchVT target=_blank aria-label=Twitter><i class="icon fab fa-twitter"><span class=label>Twitter</span></i></a></li><li><a href=//www.facebook.com/groups/505383276205793 target=_blank aria-label=Facebook><i class="icon fab fa-facebook"><span class=label>Facebook</span></i></a></li></ul><ul class=copyright><li>Copyright 2024 Hope Community Fellowship - All Rights Reserved</li></ul></footer></div><script src=/js/jquery.min.ff1523fb7389539c84c65aba19260648793bb4f5e29329d2ee8804bc37a3fe6e.js integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin=anonymous></script><script src=/js/jquery.dropotron.min.4b0a4c1a278f32f74c140865e40671b5225fcb317ccde6a7ac568b7c1c1acbe0.js integrity="sha256-SwpMGiePMvdMFAhl5AZxtSJfyzF8zeanrFaLfBway+A=" crossorigin=anonymous></script><script src=/js/jquery.scrollex.min.fc25b75fb3fc8b42756413be387e0d7a602813125283d2384551961d73ea784e.js integrity="sha256-/CW3X7P8i0J1ZBO+OH4NemAoExJSg9I4RVGWHXPqeE4=" crossorigin=anonymous></script><script src=/js/browser.min.87910d5ed0053d90caf83230a2f1811d8679815da01f7bdec7548e776d7f04c4.js integrity="sha256-h5ENXtAFPZDK+DIwovGBHYZ5gV2gH3vex1SOd21/BMQ=" crossorigin=anonymous></script><script src=/js/breakpoints.min.309febcd6d6e0cf092201532215f03a6a9f30b30f26203272a4861d704e7cd52.js integrity="sha256-MJ/rzW1uDPCSIBUyIV8DpqnzCzDyYgMnKkhh1wTnzVI=" crossorigin=anonymous></script><script src=/js/util.min.eac24742c66d70530ac02c941fb90b4c7c49aa4465cc3073d28917930634b2d3.js integrity="sha256-6sJHQsZtcFMKwCyUH7kLTHxJqkRlzDBz0okXkwY0stM=" crossorigin=anonymous></script><script src=/js/main.min.10ce0f5824242569771a85318a5848a72ce27a762359a1c2e50e0dc6a324b489.js integrity="sha256-EM4PWCQkJWl3GoUxilhIpyzienYjWaHC5Q4NxqMktIk=" crossorigin=anonymous></script><script>var refTagger={settings:{bibleVersion:"ESV",roundCorners:!0,socialSharing:[]}};(function(e,t){var n=e.createElement(t),s=e.getElementsByTagName(t)[0];n.src="//api.reftagger.com/v2/RefTagger.js",s.parentNode.insertBefore(n,s)})(document,"script")</script><script src=https://instant.page/5.2.0 type=module defer integrity=sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z crossorigin=anonymous></script></body></html>
+<!doctype html><html lang=en>
+<head>
+<title> Hope Community Fellowship</title>
+<meta charset=utf-8>
+<meta name=viewport content="width=device-width,initial-scale=1">
+<meta name=description content="Holding forth the faith that is founded in the facts.">
+<meta name=author content="David McClellan">
+<meta name=keywords content="theme,hugo,podcast"><link rel=alternate type=application/rss+xml href=https://hcftesting.hacdan.org/index.xml title="Hope Community Fellowship"><meta name=generator content="Hugo 0.92.0"><link rel="shortcut icon" href=/example16.png sizes=16x16><link rel="shortcut icon" href=/example32.png sizes=32x32>
+<meta name=apple-itunes-app content="app-id=1034013280">
+<meta property="og:title" content>
+<meta property="og:description" content>
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://hcftesting.hacdan.org/"><meta property="og:site_name" content="Hope Community Fellowship">
+<meta name=twitter:card content="summary">
+<meta name=twitter:title content>
+<meta name=twitter:description content>
+<link rel=stylesheet href=https://hcftesting.hacdan.org/fontawesome/css/all.min.css>
+<link rel=stylesheet href=/style.main.min.aa70a320735c5c77b9657769e3fe4e2519e001a1a9cf2f810bec364ccf14be81.css integrity="sha256-qnCjIHNcXHe5ZXdp4/5OJRngAaGpzy+BC+w2TM8UvoE=" media=screen crossorigin=anonymous><link rel=stylesheet href=https://hcftesting.hacdan.org/example.css></head>
+<body class=landing>
+<div id=page-wrapper>
+<header id=header class=alt>
+<h1><a href=https://hcftesting.hacdan.org/>Hope Community Fellowship</a></h1>
+<nav id=nav>
+<ul>
+<li>
+<a href=/>
+Home
+</a>
+</li>
+<li>
+<a href=/goodnews>
+Good News
+</a>
+</li>
+<li>
+<a href=/whattoexpect>
+What to expect
+</a>
+</li>
+<li>
+<a href=/about><i class="fas fa-angle-down"></i>
+About
+</a>
+<ul>
+<li><a href=/about>About Us</a></li>
+</li>
+<li><a href=/sermonnotes>Sermon Notes</a></li>
+</li>
+<li><a href=/whatwebelieve>What We Believe</a></li>
+</li>
+</ul>
+</li>
+<li>
+<a href=/contact>
+Contact Us
+</a>
+</li>
+<li>
+<a href=/missionstatement>
+Mission Statement
+</a>
+</li>
+</ul>
+</nav>
+</header>
+<section id=banner>
+<h2>Hope Community Fellowship</h2>
+<p>Holding forth the faith that is founded in the facts.</p>
+<ul class="actions special">
+<li><a href=/contact class="button primary">Get in touch</a></li>
+<li><a href=/#feature-icons class=button>Find out more</a></li>
+</ul>
+</section>
+<section id=main class=container>
+<section class="box special">
+<header class=major>
+<h2>Church on Sunday</h2><a name=services></a>
+<p>We meet at 10AM at <a href="https://www.google.com/maps?q=973+Nortontown+Road,+Addison,+VT,+USA">973 Nortontown Road, Addison VT 05491</a> in the Kauffman&rsquo;s front yard.</p>
+</header>
+<div id=map class=box></div>
+<link rel=stylesheet href=https://unpkg.com/leaflet@1.9.3/dist/leaflet.css integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin=anonymous>
+<script src=https://unpkg.com/leaflet@1.9.3/dist/leaflet.js integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=anonymous></script>
+<script>var loc=[44.06024181551744,-73.29052538667707],mymap=L.map("map").setView(loc,18),marker;L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",{attribution:'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',maxZoom:18}).addTo(mymap),marker=L.marker(loc).addTo(mymap)</script>
+</section>
+<a name=feature-icons></a>
+<section class="box special features">
+<div class=features-row>
+<section>
+<span class="icon major fas fa-hands-helping accent1"></span>
+<h3>Serve</h3>
+<p>Growing people who serve our community.</p>
+</section>
+<section>
+<span class="icon major fas fa-church accent2"></span>
+<h3>Meet</h3>
+<p>Meeting together to listen to God&rsquo;s word.</p>
+</section>
+</div>
+<div class=features-row>
+<section>
+<span class="icon major fas fa-comments accent5"></span>
+<h3>Speak</h3>
+<p>Speaking encouragement to one-another.</p>
+</section>
+<section>
+<span class="icon major fas fa-heartbeat accent3"></span>
+<h3>Loved</h3>
+<p>Knowing Love. Being Loved. The greatest commandment</p>
+</section>
+</div>
+</section>
+<a name=feature-images></a>
+<div class=row>
+<div class="col-6 col-12-narrower">
+<section class="box special">
+<span class="image featured"><img src=https://hcftesting.hacdan.org/img/freely-10057.jpg alt></span>
+<h3>Childrens' Ministry</h3>
+<p>A church for the family. We offer childrends ministry during our Sunday service.</p>
+</section>
+</div>
+<div class="col-6 col-12-narrower">
+<section class="box special">
+<span class="image featured"><img src=https://hcftesting.hacdan.org/img/biblestudy.jpg alt></span>
+<h3>Thursday Biblestudy</h3>
+<p>Want more during the week?</p>
+<ul class="actions special">
+<li><a href=https://hcftesting.hacdan.org/services class="button alt">Join us for Thursday evening Bible study!</a></li>
+</ul>
+</section>
+</div>
+</div>
+</section>
+<footer id=footer>
+<ul class=icons>
+<li>
+<a href=//twitter.com/@HCFChurchVT target=_blank aria-label=Twitter><i class="icon fab fa-twitter"><span class=label>Twitter</span></i></a>
+</li>
+<li>
+<a href=//www.facebook.com/groups/505383276205793 target=_blank aria-label=Facebook><i class="icon fab fa-facebook"><span class=label>Facebook</span></i></a>
+</li>
+</ul>
+<ul class=copyright><li>Copyright 2024 Hope Community Fellowship - All Rights Reserved</li></ul>
+</footer>
+</div>
+<script src=/js/jquery.min.ff1523fb7389539c84c65aba19260648793bb4f5e29329d2ee8804bc37a3fe6e.js integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin=anonymous></script>
+<script src=/js/jquery.dropotron.min.4b0a4c1a278f32f74c140865e40671b5225fcb317ccde6a7ac568b7c1c1acbe0.js integrity="sha256-SwpMGiePMvdMFAhl5AZxtSJfyzF8zeanrFaLfBway+A=" crossorigin=anonymous></script>
+<script src=/js/jquery.scrollex.min.fc25b75fb3fc8b42756413be387e0d7a602813125283d2384551961d73ea784e.js integrity="sha256-/CW3X7P8i0J1ZBO+OH4NemAoExJSg9I4RVGWHXPqeE4=" crossorigin=anonymous></script>
+<script src=/js/browser.min.87910d5ed0053d90caf83230a2f1811d8679815da01f7bdec7548e776d7f04c4.js integrity="sha256-h5ENXtAFPZDK+DIwovGBHYZ5gV2gH3vex1SOd21/BMQ=" crossorigin=anonymous></script>
+<script src=/js/breakpoints.min.309febcd6d6e0cf092201532215f03a6a9f30b30f26203272a4861d704e7cd52.js integrity="sha256-MJ/rzW1uDPCSIBUyIV8DpqnzCzDyYgMnKkhh1wTnzVI=" crossorigin=anonymous></script>
+<script src=/js/util.min.db0a4206c0f9563e824d23431e9c5a7afbc06610918d145378c5f6bd009e6023.js integrity="sha256-2wpCBsD5Vj6CTSNDHpxaevvAZhCRjRRTeMX2vQCeYCM=" crossorigin=anonymous></script>
+<script src=/js/main.min.4aa30f8b1791940760431e5d7eb1da194824c4a072b00f67807b13cf476429e6.js integrity="sha256-SqMPixeRlAdgQx5dfrHaGUgkxKBysA9ngHsTz0dkKeY=" crossorigin=anonymous></script>
+<script>var refTagger={settings:{bibleVersion:"ESV",roundCorners:!0,socialSharing:[]}};(function(a,b){var c=a.createElement(b),d=a.getElementsByTagName(b)[0];c.src="//api.reftagger.com/v2/RefTagger.js",d.parentNode.insertBefore(c,d)})(document,"script")</script>
+<script src=https://instant.page/5.2.0 type=module defer integrity=sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z crossorigin=anonymous></script>
+</body>
+</html>
