--- a/missionstatement/index.html
+++ b/missionstatement/index.html
@@ -1,5 +1,114 @@
-<!doctype html><html lang=en><head><title>Mission Statement | Hope Community Fellowship</title>
-<meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=description content="Holding forth the faith that is founded in the facts."><meta name=author content="David McClellan"><meta name=keywords content><meta name=generator content="Hugo 0.126.3"><link rel="shortcut icon" href=/example16.png sizes=16x16><link rel="shortcut icon" href=/example32.png sizes=32x32><meta name=apple-itunes-app content="app-id=1034013280"><meta property="og:url" content="https://hcftesting.hacdan.org/missionstatement/"><meta property="og:site_name" content="Hope Community Fellowship"><meta property="og:title" content="Mission Statement"><meta property="og:description" content="As a church family we strive to obey the Bible Bringing people to Jesus and Membership in His family Developing them to Christlike Maturity Equipping them for their Ministry in the Church And life Mission, in order to Magnify God’s Name We believe this is accomplished through literal Bible interpretation, and obedience to the Word of God.
-We, for our part, proclaim him, we warn, confront, and teach everyone in all wisdom; so that we may present everyone as having reached the goal, united with the Messiah."><meta property="og:locale" content="en_us"><meta property="og:type" content="article"><meta property="og:image" content="https://hcftesting.hacdan.org/img/globe.jpg"><meta name=twitter:card content="summary_large_image"><meta name=twitter:image content="https://hcftesting.hacdan.org/img/globe.jpg"><meta name=twitter:title content="Mission Statement"><meta name=twitter:description content="As a church family we strive to obey the Bible Bringing people to Jesus and Membership in His family Developing them to Christlike Maturity Equipping them for their Ministry in the Church And life Mission, in order to Magnify God’s Name We believe this is accomplished through literal Bible interpretation, and obedience to the Word of God.
-We, for our part, proclaim him, we warn, confront, and teach everyone in all wisdom; so that we may present everyone as having reached the goal, united with the Messiah."><link rel=stylesheet href=https://hcftesting.hacdan.org/fontawesome/css/all.min.css><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/plyr/3.7.8/plyr.min.css integrity="sha512-uPqDOam5vjVgnASE75fCgMtdLa3oK2+3muDU5ESulSImHAA0Z0xjEnuJpKowTsXUWY09MsYre48zgBFwh2P/yw==" crossorigin=anonymous><link rel=stylesheet href=/style.main.min.71d9d9da0478bb74a6b06b0ecec6a8756e95d2fa824e058753bce43a487f35a2.css integrity="sha256-cdnZ2gR4u3SmsGsOzsaodW6V0vqCTgWHU7zkOkh/NaI=" media=screen crossorigin=anonymous><link rel=stylesheet href=https://hcftesting.hacdan.org/example.css></head><body><div id=page-wrapper><header id=header><h1><a href=https://hcftesting.hacdan.org/>Hope Community Fellowship</a></h1><nav id=nav><ul><li><a href=/>Home</a></li><li><a href=/goodnews>Good News</a></li><li><a href=/whattoexpect>What to expect</a></li><li><a href=/about><i class="fas fa-angle-down"></i>
-About</a><ul><li><a href=/about>About Us</a></li></li><li><a href=/sermonnotes>Sermon Notes</a></li></li><li><a href=/whatwebelieve>What We Believe</a></li></li></ul></li><li><a href=/contact>Contact Us</a></li><li><a href=/missionstatement>Mission Statement</a></li></ul></nav></header><section id=main class=container><header><h2>Mission Statement</h2></header><div class=box><span class="image featured"><img src=https://hcftesting.hacdan.org/img/globe.jpg alt></span><div class=page-content><h2 id=as-a-church-family-we-strive-to-obey-the-bible>As a church family we strive to obey the Bible</h2><ul><li>Bringing people to Jesus and <strong><em>Membership</em></strong> in His family</li><li>Developing them to Christlike <strong><em>Maturity</em></strong></li><li>Equipping them for their <strong><em>Ministry</em></strong> in the Church</li><li>And life Mission, in order to <strong><em>Magnify</em></strong> God&rsquo;s Name</li></ul><p>We believe this is accomplished through literal Bible interpretation, and obedience to the Word of God.</p><blockquote><p>We, for our part, proclaim him, we warn, confront, and teach everyone in all wisdom; so that we may present everyone as having reached the goal, united with the Messiah. (Colossians 1:28 Complete Jewish Bible)</p></blockquote></div></div></section><footer id=footer><ul class=icons><li><a href=//twitter.com/@HCFChurchVT target=_blank aria-label=Twitter><i class="icon fab fa-twitter"><span class=label>Twitter</span></i></a></li><li><a href=//www.facebook.com/groups/505383276205793 target=_blank aria-label=Facebook><i class="icon fab fa-facebook"><span class=label>Facebook</span></i></a></li></ul><ul class=copyright><li>Copyright 2024 Hope Community Fellowship - All Rights Reserved</li></ul></footer></div><script src=/js/jquery.min.ff1523fb7389539c84c65aba19260648793bb4f5e29329d2ee8804bc37a3fe6e.js integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin=anonymous></script><script src=/js/jquery.dropotron.min.4b0a4c1a278f32f74c140865e40671b5225fcb317ccde6a7ac568b7c1c1acbe0.js integrity="sha256-SwpMGiePMvdMFAhl5AZxtSJfyzF8zeanrFaLfBway+A=" crossorigin=anonymous></script><script src=/js/jquery.scrollex.min.fc25b75fb3fc8b42756413be387e0d7a602813125283d2384551961d73ea784e.js integrity="sha256-/CW3X7P8i0J1ZBO+OH4NemAoExJSg9I4RVGWHXPqeE4=" crossorigin=anonymous></script><script src=/js/browser.min.87910d5ed0053d90caf83230a2f1811d8679815da01f7bdec7548e776d7f04c4.js integrity="sha256-h5ENXtAFPZDK+DIwovGBHYZ5gV2gH3vex1SOd21/BMQ=" crossorigin=anonymous></script><script src=/js/breakpoints.min.309febcd6d6e0cf092201532215f03a6a9f30b30f26203272a4861d704e7cd52.js integrity="sha256-MJ/rzW1uDPCSIBUyIV8DpqnzCzDyYgMnKkhh1wTnzVI=" crossorigin=anonymous></script><script src=/js/util.min.eac24742c66d70530ac02c941fb90b4c7c49aa4465cc3073d28917930634b2d3.js integrity="sha256-6sJHQsZtcFMKwCyUH7kLTHxJqkRlzDBz0okXkwY0stM=" crossorigin=anonymous></script><script src=/js/main.min.10ce0f5824242569771a85318a5848a72ce27a762359a1c2e50e0dc6a324b489.js integrity="sha256-EM4PWCQkJWl3GoUxilhIpyzienYjWaHC5Q4NxqMktIk=" crossorigin=anonymous></script><script>var refTagger={settings:{bibleVersion:"ESV",roundCorners:!0,socialSharing:[]}};(function(e,t){var n=e.createElement(t),s=e.getElementsByTagName(t)[0];n.src="//api.reftagger.com/v2/RefTagger.js",s.parentNode.insertBefore(n,s)})(document,"script")</script><script src=https://cdnjs.cloudflare.com/ajax/libs/plyr/3.7.8/plyr.polyfilled.min.js integrity="sha512-CXGbF3dJwjf6VoLTAitzgDvMH4Hck+s3qJJeq7Klbg0NnFWfyD5rxoK4Z0JGMv+BIlxKJwESN/8RNaqr1/cxQQ==" crossorigin=anonymous></script><script>$(document).ready(function(){$("#player").length&&new Plyr("#player",{settings:["speed"]})})</script><script src=https://instant.page/5.2.0 type=module defer integrity=sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z crossorigin=anonymous></script></body></html>
+<!doctype html><html lang=en>
+<head>
+<title>Mission Statement | Hope Community Fellowship</title>
+<meta charset=utf-8>
+<meta name=viewport content="width=device-width,initial-scale=1">
+<meta name=description content="Holding forth the faith that is founded in the facts.">
+<meta name=author content="David McClellan">
+<meta name=keywords content><meta name=generator content="Hugo 0.92.0"><link rel="shortcut icon" href=/example16.png sizes=16x16><link rel="shortcut icon" href=/example32.png sizes=32x32>
+<meta name=apple-itunes-app content="app-id=1034013280">
+<meta property="og:title" content="Mission Statement">
+<meta property="og:description" content="As a church family we strive to obey the Bible  Bringing people to Jesus and Membership in His family Developing them to Christlike Maturity Equipping them for their Ministry in the Church And life Mission, in order to Magnify God&rsquo;s Name  We believe this is accomplished through literal Bible interpretation, and obedience to the Word of God.
+ We, for our part, proclaim him, we warn, confront, and teach everyone in all wisdom; so that we may present everyone as having reached the goal, united with the Messiah.">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://hcftesting.hacdan.org/missionstatement/"><meta property="og:image" content="https://hcftesting.hacdan.org/img/globe.jpg"><meta property="article:section" content>
+<meta property="og:site_name" content="Hope Community Fellowship">
+<meta name=twitter:card content="summary_large_image">
+<meta name=twitter:image content="https://hcftesting.hacdan.org/img/globe.jpg">
+<meta name=twitter:title content="Mission Statement">
+<meta name=twitter:description content="As a church family we strive to obey the Bible  Bringing people to Jesus and Membership in His family Developing them to Christlike Maturity Equipping them for their Ministry in the Church And life Mission, in order to Magnify God&rsquo;s Name  We believe this is accomplished through literal Bible interpretation, and obedience to the Word of God.
+ We, for our part, proclaim him, we warn, confront, and teach everyone in all wisdom; so that we may present everyone as having reached the goal, united with the Messiah.">
+<link rel=stylesheet href=https://hcftesting.hacdan.org/fontawesome/css/all.min.css><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/plyr/3.7.8/plyr.min.css integrity="sha512-uPqDOam5vjVgnASE75fCgMtdLa3oK2+3muDU5ESulSImHAA0Z0xjEnuJpKowTsXUWY09MsYre48zgBFwh2P/yw==" crossorigin=anonymous>
+<link rel=stylesheet href=/style.main.min.aa70a320735c5c77b9657769e3fe4e2519e001a1a9cf2f810bec364ccf14be81.css integrity="sha256-qnCjIHNcXHe5ZXdp4/5OJRngAaGpzy+BC+w2TM8UvoE=" media=screen crossorigin=anonymous><link rel=stylesheet href=https://hcftesting.hacdan.org/example.css></head>
+<body>
+<div id=page-wrapper>
+<header id=header>
+<h1><a href=https://hcftesting.hacdan.org/>Hope Community Fellowship</a></h1>
+<nav id=nav>
+<ul>
+<li>
+<a href=/>
+Home
+</a>
+</li>
+<li>
+<a href=/goodnews>
+Good News
+</a>
+</li>
+<li>
+<a href=/whattoexpect>
+What to expect
+</a>
+</li>
+<li>
+<a href=/about><i class="fas fa-angle-down"></i>
+About
+</a>
+<ul>
+<li><a href=/about>About Us</a></li>
+</li>
+<li><a href=/sermonnotes>Sermon Notes</a></li>
+</li>
+<li><a href=/whatwebelieve>What We Believe</a></li>
+</li>
+</ul>
+</li>
+<li>
+<a href=/contact>
+Contact Us
+</a>
+</li>
+<li>
+<a href=/missionstatement>
+Mission Statement
+</a>
+</li>
+</ul>
+</nav>
+</header>
+<section id=main class=container>
+<header>
+<h2>Mission Statement</h2>
+</header>
+<div class=box>
+<span class="image featured"><img src=https://hcftesting.hacdan.org/img/globe.jpg alt></span>
+<div class=page-content><h2 id=as-a-church-family-we-strive-to-obey-the-bible>As a church family we strive to obey the Bible</h2>
+<ul>
+<li>Bringing people to Jesus and <strong><em>Membership</em></strong> in His family</li>
+<li>Developing them to Christlike <strong><em>Maturity</em></strong></li>
+<li>Equipping them for their <strong><em>Ministry</em></strong> in the Church</li>
+<li>And life Mission, in order to <strong><em>Magnify</em></strong> God&rsquo;s Name</li>
+</ul>
+<p>We believe this is accomplished through literal Bible interpretation, and obedience to the Word of God.</p>
+<blockquote>
+<p>We, for our part, proclaim him, we warn, confront, and teach everyone in all wisdom; so that we may present everyone as having reached the goal, united with the Messiah. (Colossians 1:28 Complete Jewish Bible)</p>
+</blockquote>
+</div>
+</div>
+</section>
+<footer id=footer>
+<ul class=icons>
+<li>
+<a href=//twitter.com/@HCFChurchVT target=_blank aria-label=Twitter><i class="icon fab fa-twitter"><span class=label>Twitter</span></i></a>
+</li>
+<li>
+<a href=//www.facebook.com/groups/505383276205793 target=_blank aria-label=Facebook><i class="icon fab fa-facebook"><span class=label>Facebook</span></i></a>
+</li>
+</ul>
+<ul class=copyright><li>Copyright 2024 Hope Community Fellowship - All Rights Reserved</li></ul>
+</footer>
+</div>
+<script src=/js/jquery.min.ff1523fb7389539c84c65aba19260648793bb4f5e29329d2ee8804bc37a3fe6e.js integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin=anonymous></script>
+<script src=/js/jquery.dropotron.min.4b0a4c1a278f32f74c140865e40671b5225fcb317ccde6a7ac568b7c1c1acbe0.js integrity="sha256-SwpMGiePMvdMFAhl5AZxtSJfyzF8zeanrFaLfBway+A=" crossorigin=anonymous></script>
+<script src=/js/jquery.scrollex.min.fc25b75fb3fc8b42756413be387e0d7a602813125283d2384551961d73ea784e.js integrity="sha256-/CW3X7P8i0J1ZBO+OH4NemAoExJSg9I4RVGWHXPqeE4=" crossorigin=anonymous></script>
+<script src=/js/browser.min.87910d5ed0053d90caf83230a2f1811d8679815da01f7bdec7548e776d7f04c4.js integrity="sha256-h5ENXtAFPZDK+DIwovGBHYZ5gV2gH3vex1SOd21/BMQ=" crossorigin=anonymous></script>
+<script src=/js/breakpoints.min.309febcd6d6e0cf092201532215f03a6a9f30b30f26203272a4861d704e7cd52.js integrity="sha256-MJ/rzW1uDPCSIBUyIV8DpqnzCzDyYgMnKkhh1wTnzVI=" crossorigin=anonymous></script>
+<script src=/js/util.min.db0a4206c0f9563e824d23431e9c5a7afbc06610918d145378c5f6bd009e6023.js integrity="sha256-2wpCBsD5Vj6CTSNDHpxaevvAZhCRjRRTeMX2vQCeYCM=" crossorigin=anonymous></script>
+<script src=/js/main.min.4aa30f8b1791940760431e5d7eb1da194824c4a072b00f67807b13cf476429e6.js integrity="sha256-SqMPixeRlAdgQx5dfrHaGUgkxKBysA9ngHsTz0dkKeY=" crossorigin=anonymous></script>
+<script>var refTagger={settings:{bibleVersion:"ESV",roundCorners:!0,socialSharing:[]}};(function(a,b){var c=a.createElement(b),d=a.getElementsByTagName(b)[0];c.src="//api.reftagger.com/v2/RefTagger.js",d.parentNode.insertBefore(c,d)})(document,"script")</script>
+<script src=https://cdnjs.cloudflare.com/ajax/libs/plyr/3.7.8/plyr.polyfilled.min.js integrity="sha512-CXGbF3dJwjf6VoLTAitzgDvMH4Hck+s3qJJeq7Klbg0NnFWfyD5rxoK4Z0JGMv+BIlxKJwESN/8RNaqr1/cxQQ==" crossorigin=anonymous></script>
+<script>$(document).ready(function(){})</script>
+<script src=https://instant.page/5.2.0 type=module defer integrity=sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z crossorigin=anonymous></script>
+</body>
+</html>
