deploy: 3a82e1c4ec98a0a71223fdda31bd09be8fb9c35f

--- a/whattoexpect/index.html
+++ b/whattoexpect/index.html
@@ -41,14 +41,10 @@ What to expect
 </a>
 </li>
 <li>
-<a href=/about><i class="fas fa-angle-down"></i>
+<a href=/><i class="fas fa-angle-down"></i>
 About
 </a>
 <ul>
-<li><a href=/about>About Us</a></li>
-</li>
-<li><a href=/sermonnotes>Sermon Notes</a></li>
-</li>
 <li><a href=/whatwebelieve>What We Believe</a></li>
 </li>
 </ul>
